--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.3",
         "express": "~4.15.2",
+        "express-session": "^1.15.6",
         "jsonwebtoken": "^7.3.0",
         "mongoose": "^4.12.4",
         "morgan": "~1.8.1",
