--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "jsonwebtoken": "^7.3.0",
         "mongoose": "^4.12.4",
         "morgan": "~1.8.1",
+        "multer": "^1.3.0",
         "nodemailer": "^4.3.1",
         "pug": "~2.0.0-beta11",
         "request": "^2.81.0",
